2007-11-16 sstein <sstein@geo.unizh.ch>
      src/org.openjump.core.spatialAttributeOps/AttributeOp.java:
      added lib: jmatharray-20070905.jar
      removed lib: jmath5m.jar
      Updated to newer version of jmatharray library which works on double[][].
      
2007-11-14 Andreas Schmitz <schmitz@lat-lon.de>
      src/com/vividsolutions/wms/Parser.java:
      External DTDs are not loaded automatically anymore for WMS, this
      enables offline working with local WMSs.
      
2007-11-08 beckerl <becker.larry@gmail.com>
           * Added a Paste Items At Point menu item on the layer view context
             menu that pastes the clipboard at the right-clicked point.  Note 
             that there must be an editable layer highlighted.  No I18n entries yet.
             org.openjump.core.ui.plugin.mousemenu.PasteItemsAtPlugIn.java
             com.vividsolutions.jump.workbench.JUMPConfiguration.java

 
2007-11-07 beckerl <becker.larry@gmail.com>
           * Added a shift key mode to Move Selected Items cursor tool that 
             turns it into Rotate Selected Items.
             com.vividsolutions.jump.workbench.ui.cursortool.editing.MoveSelectedItemsTool.java
             com.vividsolutions.jump.workbench.ui.images.RotateSelCursor.gif
             
 2007-11-06 Paul Austin <paul.austin@revolsys.com
  * Improved speed of the Open Wizard Plug-in. Added support to remember last 
    panel used in the current session. Added the switching between types as a
    side bar.

2007-11-06 beckerl <becker.larry@gmail.com>
           * Added a shift key mode to Move Selected Items cursor tool that 
             turns it into Rotate Selected Items.
             com.vividsolutions.jump.workbench.ui.cursortool.editing.MoveSelectedItemsTool.java
             com.vividsolutions.jump.workbench.ui.images.RotateSelCursor.gif
             
 2007-11-06 beckerl <becker.larry@gmail.com>
          * Fixed File->Save View as Raster bug with the Metal L&F that caused