@@ -361,6 +361,7 @@ model.StandardCategoryNames.working = Working
 org.openjump.core.ui.plugin.datastore.AddDataStoreLayerWizard = Data Store Layer
 org.openjump.core.ui.plugin.datastore.AddDataStoreLayerWizardPanel = Data Store Layer
 org.openjump.core.ui.plugin.datastore.AddDataStoreLayerWizardPanel.instructions = Select the parameters for the layer to load
+org.openjump.core.ui.plugin.edit.CopyBBoxPlugin.name = Copy bounding box to clipboard
 org.openjump.core.ui.plugin.edit.helpclassesselection.DrawFenceTool.layer-items = Layer items
 org.openjump.core.ui.plugin.edit.helpclassesselection.DrawFenceTool.selected-items = Selected items
 org.openjump.core.ui.plugin.edit.helpclassesselection.SelectItemsByCircleTool.layer-items = Layer Items
