@@ -348,6 +348,7 @@ model.StandardCategoryNames.working = Projekt
 org.openjump.core.ui.plugin.datastore.AddDataStoreLayerWizard = Data Store Layer
 org.openjump.core.ui.plugin.datastore.AddDataStoreLayerWizardPanel = Data Store Layer
 org.openjump.core.ui.plugin.datastore.AddDataStoreLayerWizardPanel.instructions = Select the parameters for the layer to load
+org.openjump.core.ui.plugin.edit.CopyBBoxPlugin.name = Kopiere bounding box in Zwischenablage
 org.openjump.core.ui.plugin.edit.helpclassesselection.DrawFenceTool.layer-items = Ebenen-Objekte
 org.openjump.core.ui.plugin.edit.helpclassesselection.DrawFenceTool.selected-items = gew\u00E4hlte Objekte
 org.openjump.core.ui.plugin.edit.helpclassesselection.SelectItemsByCircleTool.layer-items = Ebenen-Objekte
