@@ -348,6 +348,7 @@ model.StandardCategoryNames.working = Ty\u00F6tila
 org.openjump.core.ui.plugin.datastore.AddDataStoreLayerWizard = Data Store Layer
 org.openjump.core.ui.plugin.datastore.AddDataStoreLayerWizardPanel = Data Store Layer
 org.openjump.core.ui.plugin.datastore.AddDataStoreLayerWizardPanel.instructions = Select the parameters for the layer to load
+org.openjump.core.ui.plugin.edit.CopyBBoxPlugin.name = Copy bounding box to clipboard
 org.openjump.core.ui.plugin.edit.helpclassesselection.DrawFenceTool.layer-items = Tason kohteet
 org.openjump.core.ui.plugin.edit.helpclassesselection.DrawFenceTool.selected-items = Valitut kohteet
 org.openjump.core.ui.plugin.edit.helpclassesselection.SelectItemsByCircleTool.layer-items = Tason primitiivit
