@@ -348,6 +348,7 @@ model.StandardCategoryNames.working = Travail
 org.openjump.core.ui.plugin.datastore.AddDataStoreLayerWizard = Data Store Layer
 org.openjump.core.ui.plugin.datastore.AddDataStoreLayerWizardPanel = Data Store Layer
 org.openjump.core.ui.plugin.datastore.AddDataStoreLayerWizardPanel.instructions = Select the parameters for the layer to load
+org.openjump.core.ui.plugin.edit.CopyBBoxPlugin.name = Copy bounding box to clipboard
 org.openjump.core.ui.plugin.edit.helpclassesselection.DrawFenceTool.layer-items = El\u00E9ments de la couche
 org.openjump.core.ui.plugin.edit.helpclassesselection.DrawFenceTool.selected-items = El\u00E9ments s\u00E9lectionn\u00E9s
 org.openjump.core.ui.plugin.edit.helpclassesselection.SelectItemsByCircleTool.layer-items = El\u00E9ments de la couche
