@@ -343,6 +343,7 @@ model.StandardCategoryNames.working = Progetto
 org.openjump.core.ui.plugin.datastore.AddDataStoreLayerWizard = Livello Datastore 
 org.openjump.core.ui.plugin.datastore.AddDataStoreLayerWizardPanel = Livello Datastore 
 org.openjump.core.ui.plugin.datastore.AddDataStoreLayerWizardPanel.instructions = Seleziona i parametri per il livello da caricare
+org.openjump.core.ui.plugin.edit.CopyBBoxPlugin.name = Copy bounding box to clipboard
 org.openjump.core.ui.plugin.edit.ReplicateSelectedItemsPlugIn.attribute-schemas-are-different = Schemi attributi sono diversi\!
 org.openjump.core.ui.plugin.edit.ReplicateSelectedItemsPlugIn.copy-only-geometry = Copia solo la geometria?
 org.openjump.core.ui.plugin.edit.ReplicateSelectedItemsPlugIn.item = elemento
